# MPI

./: CMakeLists.txt  README.md
1/: lab_1.cpp
2/: lab_2.cpp
3/: lab_3.cpp
4/: lab_4.cpp
5/: lab_5.cpp
6/: lab_6.cpp
